--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "dev": "webpack -w & nodemon index.js",
+        "dev": "webpack -w & node index.js",
+        "dev2": "webpack -w & nodemon index.js",
         "build": "npm install"
     },
     "author": "sharaf",
