--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "path": "^0.12.7",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
+        "react-router-dom": "^4.2.2",
         "request": "^2.81.0",
         "serve-favicon": "~2.3.0"
     },
