--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "private": true,
     "scripts": {
         "start": "webpack -w & nodemon index.js",
-        "build": "webpack -p & NODE_ENV=production nodemon index.js"
+        "build": "NODE_ENV=production webpack -p & NODE_ENV=production nodemon index.js"
     },
     "repository": {
         "type": "git",
@@ -16,10 +16,11 @@
     "license": "ISC",
     "homepage": "https://github.com/msharaf10/edigame-frontend",
     "dependencies": {
-        "body-parser": "~1.13.2",
-        "express": "~4.13.1",
-        "morgan": "^1.8.2",
-        "nodemon": "^1.11.0",
+        "body-parser": "^1.13.3",
+        "bootstrap": "^4.0.0-beta",
+        "express": "^4.13.4",
+        "morgan": "^1.9.0",
+        "nodemon": "^1.12.1",
         "path": "^0.12.7",
         "prop-types": "^15.6.0",
         "react": "^15.6.2",
@@ -28,15 +29,18 @@
         "react-router-dom": "^4.2.2",
         "redux": "^3.7.2",
         "redux-thunk": "^2.2.0",
-        "request": "^2.81.0"
+        "request": "^2.83.0"
     },
     "devDependencies": {
-        "babel-core": "^6.25.0",
-        "babel-loader": "^7.1.1",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
-        "eslint": "^4.9.0",
-        "webpack": "^3.5.4",
+        "babel-preset-stage-0": "^6.24.1",
+        "eslint": "^4.10.0",
+        "webpack": "^3.8.1",
         "webpack-watch-livereload-plugin": "0.0.1"
     }
 }
